# softurr

./: ArbInt.cc  ArbInt.h  Complex.cc  Complex.h  FFT.cc  FFT.h  Makefile.in  README  String.h  StringMini.cc  StringMini.h  URR32.cc  URR32.h  config.h.in  configure  configure.ac  demo.cc  softurr32.asm  softurr32.h
